fix: Add fixed-top class to navbar of winter.html & summer.html and add padding-top to article element so text doesn't get hidden under navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ nav {
     background: linear-gradient(to right, #01013f, #3494E6); 
     min-height: 80px;
     font-family: "Risque", sans-serif;
+    padding-bottom: 10em;
 }
 
 nav a .logo {
@@ -69,6 +70,10 @@ div.hero-image {
 }
 
 /*---------Welcome Part----*/
+
+article {
+    padding-top: 5em;
+}
 
 .welcome-part {
     text-align: center;
@@ -128,6 +133,12 @@ hr {
     margin-left: 1em;
 }
 
+#todo,
+#tosee,
+#todosee,
+#doseenear {
+    padding-top: 3.5em;
+}
 
 
 /*------------Images for summer & winter pages---*/
@@ -138,6 +149,7 @@ hr {
     height: 300px;
     background-repeat: no-repeat;
     margin: 0.5em;
+    
 }
 
 /*--------------Footer-----------*/
